# too-many-emails

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: cd.yml  release.yml
imap/: Cargo.toml
imap_lib/src/: lib.rs
smtp/: Cargo.toml
src/: main-back.rs  main.rs  packet.rs
