[package]
name = "too_many_emails"
version = "0.1.0"
authors = ["Swords <Ibrahimhizmul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { vesion = "0.15.0", default-features = false, features = ["crossterm"] }
