[package]
name = "too_many_emails"
version = "0.1.0"
authors = ["Swords <https://github.com/SleepySwords>", "XCodeBoi <https://github.com/XcodeBoi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
postbox-rust = { git = "https://github.com/Fishy-Fishes/postbox-rust" }
# Need to re-add SMTP when we create that library.
