[package]
name = "smtp"
version = "0.1.0"
authors = ["Swords <https://github.com/SleepySwords>", "XCodeBoi <https://github.com/XcodeBoi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
argh = "0.1"
tokio-rustls = "0.22.0"
webpki-roots = "0.21"
